fix sidebar menu spacing

--- a/style.css
+++ b/style.css
@@ -18,12 +18,13 @@
     padding-left: 30px;
     padding-top: 20px;
     display: grid;
+    grid-template-rows: 100px 350px;
     resize: both;
     grid-area: 1 / 1 / 6 / 2;
     background-color: rgb(53, 121, 9);
 }
 
-.sidebar > .menu > ul {
+.sidebar .menu ul {
     list-style: none;
     line-height: 50px;
 }
@@ -33,10 +34,11 @@ ul li:nth-child(n+1):hover {
 }
 
 
-.sidebar > .settings > ul {
+.sidebar .settings ul {
     list-style: none;
     line-height: 50px;
     margin-bottom: 150px;
+    
 }
 
 a {
